# LexLoop

./: do
.githooks/: pre-commit
.github/workflows/: backend.yml  daily-smoke-tests.yml  frontend.yml  infrastructure.yml
backend/: .env  .gitignore  db_seed.sql  do  local-postgres.yml  local-test-dynamodb.yml  local-test-postgres.yml  main.py  openapi.json  pyproject.toml
backend/dev_tools/: openapi_schema.py
backend/lexloop/: conftest.py  main.py  main_test.py
backend/lexloop/auth/: auth_controller.py  auth_test.py  dependencies.py  user_database_adapter.py  user_manager.py  user_model.py  user_repository.py
backend/lexloop/config/: __init__.py  env.py
backend/lexloop/controller/: __init__.py  course_controller.py  course_controller_test.py  link_controller.py  link_controller_test.py  node_controller.py  node_controller_test.py  tag_controller.py  tag_controller_test.py  word_controller.py  word_controller_test.py
backend/lexloop/model/: __init__.py  course_model.py  link_model.py  node_model.py  tag_model.py  word_model.py
backend/lexloop/repositories/: __init__.py  ensure_tables.py  link_repository.py  word_repository.py
backend/lexloop/repository/: __init__.py  course_repository.py  ensure_tables.py  link_repository.py  node_repository.py  tag_repository.py  test_rls_example.py  word_repository.py
backend/lexloop/service/: course_service.py  link_service.py  node_service.py  tag_service.py  word_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_b85ae5afb4e9_initial.py  0002_aa13055e5739_add_courses.py
backend/smoke_tests/: test_health.py
backend/supabase/migrations/: 20241027000000_initial_schema.sql  20241027000001_enable_rls.sql
frontend/: .gitignore  README.md  do  index.html  package-lock.json  package.json
frontend/cypress/e2e/: example.cy.ts
frontend/public/favicons/: site.webmanifest
frontend/src/: App.spec.ts  App.vue
frontend/src/api/: index.ts  schema.ts
frontend/src/components/: HeaderBar.vue  LinkCreationModal.vue  LinksList.vue  NodeCard.vue  NodeCreationModal.vue  SearchBar.vue  TagCard.vue  TagCreationModal.vue  TagUpdateModal.vue
frontend/src/pages/: ClassOverviewPage.vue  LoginPage.vue  NodePage.vue  StartPage.vue  TagPage.vue  UserStartPage.vue
frontend/src/router/: index.ts
frontend/src/stores/: navigationHistory.ts
infrastructure/: README.md  do
infrastructure/base/: .terraform.lock.hcl  iam.tf  locals.tf  outputs.tf  providers.tf  s3-buckets.tf
infrastructure/env/dev/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
infrastructure/env/prod/: main.tf  outputs.tf
infrastructure/modules/env/: api_lambda.tf  cloudfront.tf  locals.tf  main.tf  outputs.tf  supabase_db.tf  variables.tf  website_bucket.tf
