[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "fastapi>=0.118.0",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "mangum>=0.19.0",
    "psycopg2-binary>=2.9.11",
    "pynamodb>=6.1.0",
    "pynamodb-attributes>=0.5.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "boto3>=1.40.45",
    "boto3-stubs>=1.40.45",
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.13.3",
]

[tool.ruff]
line-length = 80

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]

disallow_any_explicit = true
check_untyped_defs = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_subclassing_any = false
disallow_any_generics = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true
pretty = true
strict_equality = true
